# Scalable-Distributed-Url-Shortener

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  flake.nix
.github/workflows/: auto-merge-deps.yaml  build.yaml  flake-update.yaml
charts/scalable-distributed-url-shortener/: Chart.yaml  values.yaml
charts/scalable-distributed-url-shortener/templates/: nginx-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  postgres-cluster.yaml  postgres-initdb-configmap.yaml  server-deployment.yaml  server-service.yaml  url-gc-cronjob.yaml
nix/: container-image.nix  helm-chart.nix  package.nix
nix/tests/e2e/: default.nix  test.sh
nix/tests/k8s/: default.nix  images.nix
src/: config.rs  lib.rs  orm.rs  url_repo.rs  url_service.rs
