[package]
name = "scalable-distributed-url-shortener"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Rashmi Mallarapu"]
description = "Scalable Distributed URL Shortener"
repository = "https://github.com/rashmi-mallarapu/scalable-distributed-url-shortener"
categories = ["web-programming", "asynchronous"]
keywords = ["short", "url", "server"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
base62 = "2.2.4"
blake3 = "1.8.4"
rand = "0.10.1"
rearch = "0.10.2"
rearch-effects = "0.6.0"
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["parsing"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = "0.1.42"
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = { version = "1.23.2", features = ["v4"] }

[dev-dependencies]
mockall = "0.14.0"
sea-orm = { version = "2.0.0-rc.38", features = ["mock"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
clone_on_ref_ptr = "warn"
unwrap_used = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
